Producer Consumer Problem without communication

--- a/Threading.vcxproj
+++ b/Threading.vcxproj
@@ -154,6 +154,9 @@
     <ClCompile Include="Threading\LogTiming.cpp" />
     <ClCompile Include="Threading\main.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include=".gitignore" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
